Writing test to check books in library on initialize, expanding initialize method so that book list can be called upon by typing 'library'

--- a/lib/library.yaml
+++ b/lib/library.yaml
@@ -3,13 +3,13 @@
     :title: Trollkarlens hatt
     :author: Tove Jansson
   :available: true
-  :return_date: 
+  :return_date: 2020-11-31
 - :item:
     :title: Farlig midsommar
     :author: Tove Jansson
   :available: false
-  :return_date: '2020-11-31'
-- :item: 
+  :return_date: 2020-11-31
+- :item:
     :title: Trollvinter
     :author: Tove Jansson
   :available: true
